# sistema_ventas_productos

./: CMakeLists.txt  README.md
doc/DB/: sistemaVentas.sql
include/: Carrito.h  Database.h  Producto.h
src/: Carrito.cpp  Database.cpp  Main.cpp  Producto.cpp
